<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:elevation="10dp"
        app:cardCornerRadius="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/timeRV_TV"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginVertical="5dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/time_textview_style"
                android:gravity="center"
                android:text="@string/_10_30_pm"
                android:textColor="@color/black"
                android:textSize="22sp" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/clinicNameRV_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/clinic_name"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/doctorNameRV_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/doctor_name"
                    android:textColor="#858484"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/dateRV_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:drawableStart="@drawable/ic_baseline_calendar_today_24"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:text="@string/_3_may_2022"
                    android:textColor="#858484"
                    android:textSize="16sp" />


            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>